spec/test/parser/valid/class_structure/public_interfaces.java
  public interface Public_Interfaces {}

