spec/test/parser/invalid/_custom/interface_abstract_constructor.java
public interface InterfaceAbstractConstructor {
    public abstract InterfaceAbstractConstructor() {}
}
